# ciatec-research-api

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  AGENTS.md  Dockerfile  alembic.ini  debug_db_test.py  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.cursor.rules/: PROJECT-STANDARDS.md
.cursor/rules/: ciatec-research-api-python.mdc
alembic/: env.py
alembic/versions/: f0_01_initial_empty.py  f0_02_auth_tables.py  f0_04_catalog_tables.py  f0_05_sessions_matches.py  f0_07_trunktilt_telemetry.py  f0_08_bubbles_telemetry.py  f0_09_bestbeat_telemetry.py  f10_02_project_export_jobs.py  f1_01_participant_profiles.py  f1_02_health_conditions.py  f1_03_participant_condition_temporal.py  f2_01_vocabulary_tables_seed.py  f3_01_projects_tables.py  f3_02_groups_and_enrollments_skeleton.py  f3_03_project_members_one_role_per_user.py  f4_01_enrollments_exit_reason_timeline.py  f5_01_assessment_templates.py  f5_02_questionnaire_templates.py  f5_03_intervention_templates.py  f5_04_instrument_indications.py  f6_01_assessment_records.py  f6_02_questionnaire_responses.py  f6_03_intervention_records.py  f8_01_sessions_enrollment_id.py  f9_01_self_report_tokens.py
docs/: API-ARCHITECTURE-AND-CONVENTIONS.md  API-DOMAIN-AND-LONGITUDINAL-ARCHITECTURE.md  API-GAMEPLAY-SESSIONS.md  API-LEVEL-AND-PRESET-PAYLOADS.md  AUTH-FLOW.md  AUTH-PRODUCTION.md  COMO-RODAR-LOCAL.md  CRIS-IMPLEMENTATION-PLAN.md  DEPLOY-E-ATUALIZACOES.md  DOT-ENV-GUIDE.md  FRONTEND-API-OVERVIEW.md  FRONTEND-AUTH.md  GAME-OVERVIEW.md  LEVEL-AND-PRESET-PAYLOADS.md  PLAN-USER-LEVEL-PROGRESS.md  PR-PRODUCTION-READINESS.md  README.md  SUBIR-SERVIDOR.md  UNITY-AUTH-INTEGRATION.md  UNITY-GAMEPLAY-SESSIONS.md  runbook-prisma-migracoes-producao.md
docs/trunktilt/: API-TRUNKTILT-IMPLEMENTATION.md  TRUNKTILT-MAP-RESULTS-TELEMETRY.md  UNITY-TRUNKTILT-API-INTEGRATION.md  level_01.json  level_02.json  level_03.json
documentation/: CRIS-IMPLEMENTATION-PLAN.md  ROLES-AND-PERMISSIONS.md  STACK-AND-ARCHITECTURE.md
prisma/: schema.prisma  seed.ts
scripts/: check_openapi_parity.py  smoke_production.py
scripts/loadtest/: mixed.js
src/: __init__.py  app.ts  main.py  server.ts  worker_arq.py
src/config/: env.ts  swagger.ts
src/constants/: game-ids.ts
src/core/: __init__.py  config.py  database.py  docs_branding.py  (+4 more)
tests/: conftest.py  test_config_extra.py  test_health.py  test_timeline_f10_unit.py
(+304 files in other folders)
