[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciatec-research-api"
version = "0.1.0"
description = "CIATec Research API (FastAPI)"
requires-python = ">=3.14.2,<3.15"
dependencies = [
    "fastapi>=0.111,<0.116",
    "uvicorn[standard]>=0.30,<0.32",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29,<0.32",
    "alembic>=1.13,<1.16",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.2,<3",
    "httpx>=0.27,<0.29",
    "python-jose[cryptography]>=3.3,<3.4",
    "bcrypt>=4.1,<5",
    "email-validator>=2.0,<3",
    "redis[hiredis]>=5.0,<6",
    "arq>=0.26,<0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.26",
    "pytest-cov>=5,<7",
    "python-dotenv>=1.0,<2",
    "ruff>=0.6,<0.9",
    "mypy>=1.10,<1.14",
    "jsonref>=1.1,<2",
    "fakeredis[lua]>=2.23,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["static/branding/*.svg"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py313"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"src/modules/**/router.py" = ["B008"]
"src/modules/instruments/router_questionnaires.py" = ["B008"]
"src/modules/instruments/router_interventions.py" = ["B008"]
"src/modules/instruments/router_indications.py" = ["B008"]
"src/modules/catalog/router_*.py" = ["B008"]
"src/modules/**/deps.py" = ["B008"]
"tests/conftest.py" = ["E402"]
"scripts/*.py" = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]
exclude = "^scripts/"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["jose.*", "bcrypt.*"]
ignore_missing_imports = true
